--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -37,23 +37,11 @@ hr {
     margin: 20px auto;
 }
 
-.post + .post {
-    margin-top: 20px;
-}
 
-.post-title {
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.post-body {
-    margin: 0;
-    font-size: 17px;
-}
-
-.post-author {
-    font-style: italic;
-    font-size: 12px;
+#masthead{
+	display:grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto;
 }
 
 nav ul {
@@ -65,7 +53,17 @@ nav ul li {
     list-style: none;
     display: inline-block;
     margin-right: 15px;
+    float: right;
 }
+
+#company_name_div{
+        height:auto;
+        width:360px;
+    }
+#logoimg{
+        width:100%;
+        height:auto;
+    }
 
 nav #user-account {
     float: right;
