--- a/src/main/resources/templates/paintroom.html
+++ b/src/main/resources/templates/paintroom.html
@@ -39,7 +39,7 @@
         <a id="tool-eraser">Eraser</a>
         |
         <form class="imgur-submit">
-          <input id="uploadtoimgur" type="button" data-action="Save and upload-to-imgur" value="Upload to Imgur"/>
+          <input id="uploadtoimgur" type="button" data-action="Save and upload-to-imgur" value="Save your work"/>
         </form>
       </span>
       <span id="imgururl">
