--- a/src/main/resources/templates/paintselect.html
+++ b/src/main/resources/templates/paintselect.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
   <head>
-      
     <title>Paint your World</title>  
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
@@ -20,7 +19,7 @@
    </head> 
   
   <body>
-   <div th:replace="template :: navigation"></div>
+   <nav th:replace="template :: navigation"></nav>
 
   <div id="transf_div">
     <span id="tranf_desc">Want to see how your favorite shade looks on the walls before buying a sample? You can do just that in 3 steps. 
@@ -35,13 +34,11 @@
 	   </div>
      </div>	
     
-    
      <div class="colorpalcontent">
-	   <div class="tcont cont2">2. Choose your wall color</div>
-	   <div class="tcont cont3">Palettes</div>
+	   <div class="tcont cont2">2. Choose your wall color from our palettes</div>
+	<!--   <div class="tcont cont3">Palettes</div> --> 
   	   <div id="div_colorfamily" class="toolbar"></div>
      </div>
-    
     
       <div id="colorchoosecontent_div">
        <div id="div_colframe"></div>
@@ -52,11 +49,10 @@
       <form id="submitform" method="post">
           <input id="formroom" name="selroom" style="display:none" type="text"></input>
           <input id="formcolor" name="selcolor" style="display:none" type="text"></input>
-          <button id="go">Transform</button>
+          <div class="tcont cont2">3...And click</div> 
+          <button id="submitbtn">Transform</button>
       </form>
       
-    
- 
    </div>
 
  <script type="text/javascript">
@@ -77,8 +73,6 @@
     col_purple = [{id:'lavender',name:"Lavender",hexcode:"#E6E6FA"},{id:'thistle',name:"Thistle",hexcode:"#D8BFD8"},{id:'plum',name:"Plum",hexcode:"#DDA0DD"},{id:'orchid',name:"Orchid",hexcode:"#DA70D6"},{id:'violet',name:"Violet",hexcode:"##EE82EE"},{id:'fuchsia',name:"Fuchsia",hexcode:"#FF00FF"},{id:'purple',name:"Purple",hexcode:"#800080"},{id:'slateblue',name:"Slate Blue",hexcode:"#6A5ACD"},{id:'indigo',name:"Indigo",hexcode:"#4B0082"}];
 
     col_neutral = [{id:'cornsilk',name:"Corn Silk",hexcode:"#FFF8DC"},{id:'bisque',name:"Bisque",hexcode:"#FFE4C4"},{id:'wheat',name:"Wheat",hexcode:"#F5DEB3"},{id:'tan',name:"Tan",hexcode:"#D2B48C"},{id:'sienna',name:"Sienna",hexcode:"#A0522D"},{id:'mintcream',name:"Mint Cream",hexcode:"#F5FFFA"},{id:'azure',name:"Azure",hexcode:"#F0FFFF"},{id:'ghostwhite',name:"CGhost White",hexcode:"#F8F8FF"},{id:'biege',name:"Biege",hexcode:"#F5F5DC"},{id:'silver',name:"Silver",hexcode:"#C0C0C0"},{id:'gray',name:"Gray",hexcode:"#808080"}];
-
-
 
 
     $().ready(function(){
