fixed errors vol1

--- a/src/main/resources/static/css/paintselect.css
+++ b/src/main/resources/static/css/paintselect.css
@@ -1,6 +1,7 @@
  body{
     font-family:cursive;
     background-color: #FFCC00;
+    border:5px solid royalblue;
 	}
 	
  p {
@@ -85,8 +86,7 @@
 
     #transf_div{
         position: relative;
-        
-
+     
     }
     #tranf_desc{
         display:inline-block;
