--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -19,7 +19,7 @@
         <li><a href="/rooms">Gallery</a></li>
 	    <li><a href="/login">Login</a></li>
 	    <li><a href="/logout">Logout</a></li>
-	    <li><a href="/AboutUsContactUs">About Us/Contact Us</a></li>
+	    <li><a href="/ContactUs">ContactUs</a></li>
     </ul>
     <p class="info" th:text="${status_msg}"></p>	
   </div>  
