--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -14,6 +14,7 @@
      <div id="company_name_div">
          <img id="logoimg" src="/images/masthead.png"/>
      </div>   
+	<div>
 	<ul>
         <li><a href="/paintselect">Home</a></li>
         <li><a href="/rooms">Gallery</a></li>
@@ -21,7 +22,9 @@
 	    <li><a href="/logout">Logout</a></li>
 	    <li><a href="/ContactUs">ContactUs</a></li>
     </ul>
-    <p class="info" th:text="${status_msg}"></p>	
+    <span class="info" th:text="${status_msg}"></span>	
+    </div>
+    
   </div>  
 </nav>
 
